--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
-
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;   /* <<< megakadályozza a jobbra kilógást */
+}
 .header {
     width: 100%;
     height: 400px; 
@@ -14,7 +18,11 @@ nav {
     padding: 10px 20px;
     display: flex;
     justify-content: space-between; 
-    align-items: ;  
+    align-items:center ;  
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
           
 }
 
@@ -37,4 +45,60 @@ nav {
     font-size: 1.1rem;
     font-weight: 500;
 }
+nav a:hover{
+    color: yellow;
+}
+.vonal{
+    color: white;
+}
+.Piadina{
+    background-color: #222;
+    width: 100%;
+    height: 450px;
+}
+.story {
+    background-color: #202020;
+    padding: 60px 0;
+    color: white;
+}
 
+.story-container {
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.story-left {
+    flex: 1;
+    text-align: left;
+    margin-right: 50px;
+}
+
+.story-left h3 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    text-align: right;
+    margin-right: 50px;
+}
+
+.tortenet {
+    color: #c0c0c0;
+    font-size: 1rem;
+    text-align: right;
+    margin-right: 50px;
+    
+}
+
+.story-right {
+    flex: 2;
+    line-height: 1.7;
+}
+
+.call {
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 1.1rem;
+}
