--- a/index.css
+++ b/index.css
@@ -272,6 +272,7 @@ nav a:hover{
     gap: 60px;
     color: #f5f1f1;
 }
+
  
 .nyitvatartas h2,
 .nyitvatartas h3 {
@@ -307,6 +308,8 @@ nav a:hover{
     margin-top: 60px;
     padding-top: 20px;
     border-top: 1px solid #333;
+    margin-left: 90px;
+    margin-right:90px ;
     font-size: 14px;
     line-height: 1.6;
     color: grey;
@@ -318,7 +321,7 @@ nav a:hover{
     width: 100%;
     max-width: 320px;   
     margin: 0 auto;     
-    text-align: center;
+    text-align: left;
 }
 
 .varunk
